templates/infrastructure.yml
Description: >    
    devops-nano-project-2 / Sergio Martin / Infrastructure

Parameters:
    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String

    LoadBalancerSecGroupName:
        Description: A security group name
        Type: String

    WebServerSecGroupName:
        Description: A security group name
        Type: String

Resources:
    # Specifies a security group.
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    LoadBalancerSecGroup:
        Type: AWS::EC2::SecurityGroup
        Properties: 
            GroupDescription: Allows http inbound / outbound to load balancer
            GroupName: !Ref LoadBalancerSecGroupName
            VpcId:
                Fn::ImportValue:
                    !Sub "${EnviromentName}-VPCID"
            SecurityGroupIngress: 
                - IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  CidrIp: 0.0.0.0/0
            SecurityGroupEgress: 
                - IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  CidrIp: 0.0.0.0/0
    
    WebServerSecGroup:
        Type: AWS::EC2::SecurityGroup
        Properties: 
            GroupDescription: Allows http-ssh inbound / unlimited outbound to web servers
            GroupName: !Ref WebServerSecGroupName
            VpcId:
                Fn::ImportValue:
                    !Sub "${EnviromentName}-VPCID"
            SecurityGroupIngress: 
                - IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: 0.0.0.0/0
            SecurityGroupEgress: 
                - IpProtocol: tcp
                  FromPort: 0
                  ToPort: 65535
                  CidrIp: 0.0.0.0/

    # ProfileWithRolesForOurApp:
    #     Type: AWS::IAM::InstanceProfile
    #     Properties: 
    #     Roles:
    #         - UdacityS3ReadOnlyEC2
    
    #         #!/bin/bash
    #         apt-get update -y
    #         apt-get install unzip awscli -y
    #         apt-get install apache2 -y
    #         systemctl start apache2.service
    #         cd /var/www/html
    #         aws s3 cp s3://udacity-demo-1/udacity.zip .
    #         unzip -o udacity.zip
    # Outputs: 
    #Bonus points for useful outputs!
